# seqwish

./: .gitignore  .gitmodules  CMakeLists.txt  guix.scm
.github/workflows/: build_and_test_on_push.yml
src/: alignments.hpp  compact.hpp  gfa.hpp  links.hpp  main.cpp  match.hpp  transclosure.hpp  vgp.hpp
